Fixed channels scrollbar issue

--- a/Themes/Material-Discord/src/_selectorPlaceholders.scss
+++ b/Themes/Material-Discord/src/_selectorPlaceholders.scss
@@ -1660,6 +1660,9 @@
 .chatContent_f75fb0 {
 	@extend %chatContent !optional;
 }
+.scroller__28a87 {
+	@extend %chatNsfwScroller !optional;
+}
 .base-34jWEe {
 	@extend %chatBase !optional;
 }
@@ -5938,6 +5941,9 @@ pre {
 .menu-KSaHL1 {
 	@extend %userProfileStatusMenu !optional;
 }
+.icon__2d0ab {
+	@extend %userProfileAvatarActionIcon !optional;
+}
 .custom-theme-background {
     @extend %profileCustomThemeBackground !optional;
 }
@@ -6586,10 +6592,10 @@ pre {
 .border__8d6b3 {
 	@extend %settingsServerBoostHeaderBorder !optional;
 }
-.warning__6436f {
+.warning__35859 {
 	@extend %keybindWarningCard !optional;
 }
-.icon__6436f {
+.icon__35859 {
 	@extend %keybindWarningCardIcon !optional;
 }
 .row__740f2 {
