--- a/Themes/Material-Discord/src/beta/_visualRefresh.scss
+++ b/Themes/Material-Discord/src/beta/_visualRefresh.scss
@@ -466,6 +466,10 @@
         }
     }
 
+    %chatNsfwScroller {
+        background-color: transparent;
+    }
+
     %barBase {
         &:not(%jumpToPresentBar) {
             left: 50%;
@@ -1626,6 +1630,12 @@
     &%densityDefault {
         --main-textarea-height: 48px;
 
+        %guildsWrapper {
+            %button {
+                margin: 0 8px;
+            }
+        }
+
         %privateChannel {
             &:not(%privateChannelDm) {
                 %privateChannelLink {
@@ -1723,7 +1733,7 @@
         }
 
         %channelLink {
-            min-height: 40px;
+            min-height: 38px;
         }
 
         %spotifyPanel {
@@ -1787,6 +1797,12 @@
     &%densityCompact {
         --main-textarea-height: 42px;
 
+        %guildsWrapper {
+            %button {
+                margin: 0 4px;
+            }
+        }
+
         %privateChannel {
             &:not(%privateChannelDm) {
                 %privateChannelLink {
@@ -1810,7 +1826,7 @@
         }
 
         %channelLink {
-            min-height: 28px;
+            min-height: 30px;
         }
 
         %spotifyPanel {
