--- a/Themes/Material-Discord/src/channels/_channels.scss
+++ b/Themes/Material-Discord/src/channels/_channels.scss
@@ -238,7 +238,6 @@
 /* CHANNELS LIST -> CHANNEL */
 
 %channelWrapper {
-	margin: 2px 2px 0 8px;
 	padding: 0 !important;
 	border-radius: var(--channel-radius);
 	transition: var(--default-time) var(--default-animation) background-color !important;
