--- a/Themes/Material-Discord/src/chat/_textarea.scss
+++ b/Themes/Material-Discord/src/chat/_textarea.scss
@@ -163,12 +163,12 @@
 }
 
 %channelTextAreaSendButton {
-	%buttonContents {
+	/*%buttonContents {
 		margin-left: 8px;
-	}
+	}*/
 
 	%channelTextAreaSendButtonActive {
-		color: hsl(var(--accent-hsl)) !important;
+		color: hsl(var(--accent-hsl--material-you)) !important;
 	}
 
 	%channelTextAreaSendButtonIcon {
